# comp4ds_hw6

./: LICENSE  README.md  setup.cfg  setup.py
data/: data_funs_draft.py  hw6_notebook.ipynb  hw6_notebook_ok.ipynb
hw6_answers/: hw6.py
notebook/: hw6_notebook_ok.ipynb
src/hw6_library/: __init__.py  data_functions_hw5.py
src/hw6_library/DataLoad/: __init__.py  create_data.py
src/hw6_library/DataModeling/: __init__.py
src/hw6_library/DataProcessing/: __init__.py  data_processing.py
src/hw6_library/FeatureCreation/: Transform_features.py  __init__.py
src/hw6_library/Modeling/: data_modeling.py
src/hw6_library/Preprocessing/: Preprocessing.py  __init__.py
