[metadata]
name = 'hw6_library'
version = '0.1.0'
license = 'MIT'
description = 'Setting up a python library',
long_description = file: README.rst
author = 'Daniela de los Santos & Margherita Philipp'
classifiers= 
   Intended Audience :: Education
   Natural Language :: English
   Programming Language :: Python
   Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    scipy
python_requires = >=3
include_package_data = True
zip_safe = False

[options.packages.find]
where=src